--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+/* bring in normalize.css styles */
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
@@ -7,9 +14,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e7ecf2;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  background-color: transparent;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
